[Bug #6674] add manifest-validation job (with manifest-validate action)

--- a/component/skeleton/desktop/config.tmpl.json
+++ b/component/skeleton/desktop/config.tmpl.json
@@ -19,19 +19,20 @@
     "info",
     "inspector",
     "lint",
+    "manifest-validation",
     "migration",
     "pretty",
     "profiling",
     "source",
     "source-all",
-    "source-hybrid",    
+    "source-hybrid",
     "simulation-build",
     "simulation-run",
     "test",
     "test-source",
     "translation"
   ],
-  
+
   "default-job" : "source-hybrid",
 
   "let" :
@@ -55,7 +56,7 @@
     // using a contrib: library, it will be downloaded into the path specified
     // by the 'cache/downloads' config key
     /*
-    "libraries" : 
+    "libraries" :
     {
       "library" :
       [
@@ -72,7 +73,7 @@
 	/*
     ,"build-script" :
     {
-      "compile-options" : 
+      "compile-options" :
       {
         "code" :
         {
